--- a/notes-service/.github/workflows/github-actions.yml
+++ b/notes-service/.github/workflows/github-actions.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    working-directory: notes-service
+
 jobs:
   productionDeployment:
     name: production-deployment
