--- a/notes-service/.github/workflows/github-actions.yml
+++ b/notes-service/.github/workflows/github-actions.yml
@@ -12,7 +12,7 @@ on:
 
 defaults:
   run:
-    working-directory: notes-service
+    working-directory: ./notes-service
 
 jobs:
   productionDeployment:
