--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -33,12 +33,13 @@ jobs:
           node-version: ${{ matrix.node-version }}
       # npm ci is npm i but wont change ur packagelock.json
       - run: npm ci
+        working-directory: ./notes-service
       - name: Install Plugin and Deploy
         uses: serverless/github-action@v3.1
         with:
           # install serverless plugins
-          # args: -c "serverless plugin install --name serverless-iam-roles-per-function && serverless plugin install --name serverless-plugin-typescript && serverless deploy --stage production"
-          args: -c "npm install --save-dev serverless-iam-roles-per-function && npm install -D serverless-plugin-typescript typescript && serverless deploy --stage production"
+          args: -c "serverless plugin install --name serverless-iam-roles-per-function && serverless plugin install --name serverless-plugin-typescript && serverless deploy --stage production"
+          # args: -c "npm install --save-dev serverless-iam-roles-per-function && npm install -D serverless-plugin-typescript typescript && serverless deploy --stage production"
           entrypoint: /bin/sh
         env:
           # refer the environment in our github actions configuration
