--- a/notes-service/resources/CognitoUserPool.yml
+++ b/notes-service/resources/CognitoUserPool.yml
@@ -8,12 +8,14 @@ CognitoUserPool:
       - email
       # requires MFA and validates the phone number to use as MFA
       # - phone_number
+    # UsernameAttributes: # email addresses or phone numbers can be specified as user names when a user signs up
+    #   - email
     Schema: # Contains information about the schema attribute.
-      - AttributeDataType: "String"
-        Name: "email"
+      - AttributeDataType: String
+        Name: email
         Required: true
-      - AttributeDataType: "String"
-        Name: "phone_number"
+      - AttributeDataType: String
+        Name: phone_number
         Required: false
 
 # https://aws.plainenglish.io/enable-social-login-on-aws-cognito-login-with-facebook-d4535c8847df for facebook app setup
