--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,11 +8,11 @@ on:
     branches:
       - main
 
-# env:
-#   # FACEBOOK_CLIENT_ID: sdasd
-#   # FACEBOOK_SECRET_KEY: sada
-#   # GOOGLE_APP_ID: dsads-kjjkh.apps.googleusercontent.com
-#   # GOOGLE_SECRET: GOCSPX-sdsd
+env:
+  FACEBOOK_CLIENT_ID: 577897166984054
+  FACEBOOK_SECRET_KEY: 6b3d5f6e43abc87d4a26d25c255a78a2
+  GOOGLE_APP_ID: 567562781843-7vcbos7s504iueh0f32hq8ohn8bdaobo.apps.googleusercontent.com
+  GOOGLE_SECRET: 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
 
 jobs:
   productionDeployment:
