--- a/notes-service/package.json
+++ b/notes-service/package.json
@@ -15,6 +15,8 @@
     "jest": "^29.5.0",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-jetpack": "^0.11.1",
+    "serverless-layers": "^2.6.1",
     "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^5.0.4"
   },
