--- a/notes-service/serverless.yml
+++ b/notes-service/serverless.yml
@@ -7,12 +7,17 @@ provider:
   runtime: nodejs18.x
   stage: ${opt:stage, 'dev'}
   region: us-east-2
+
+  # No cloudfront infront of api gateway, it will not create cloudfront distribution infront of api gateway
+  # default bahavior is it will create cloudfront distribution and access this api through cloudfront distribution
+  endpointType: REGIONAL
   deploymentBucket:
-    name: notes-dev
+    name: ${env:BUCKET_NAME}
   environment:
     APP_NAME: Auction Notes App
     APP_STAGE: ${opt:stage,self:provider.stage}
     SERVICE_NAME: Notes Service
+    NOTES_TABLE: ${self:custom.NOTES_TABLE.name}
 
 # package:
 #   patterns:
@@ -36,6 +41,7 @@ plugins:
   - serverless-dotenv-plugin
   - serverless-jetpack
   - serverless-layers
+  - serverless-domain-manager
 
 functions:
   authorizer:
@@ -50,8 +56,6 @@ functions:
     handler: src/handlers/createNote.handler
     iamRoleStatements:
       - ${file(./iam/NotesTableIAM.yml):PutItemNotesTableIAM}
-    environment:
-      NOTES_TABLE: !Ref NotesTable # get TableName
     events:
       - http:
           method: post
@@ -61,8 +65,6 @@ functions:
     handler: src/handlers/updateNote.handler
     iamRoleStatements:
       - ${file(./iam/NotesTableIAM.yml):UpdateItemNotesTableIAM}
-    environment:
-      NOTES_TABLE: !Ref NotesTable # get TableName
     events:
       - http:
           method: put
@@ -73,8 +75,9 @@ functions:
     handler: src/handlers/deleteNote.handler
     iamRoleStatements:
       - ${file(./iam/NotesTableIAM.yml):DeleteItemNotesTableIAM}
-    environment:
-      NOTES_TABLE: !Ref NotesTable # get TableName
+    # environment:
+    # cannot get it like this because now Im using global table
+    #   NOTES_TABLE: !Ref NotesTable # get TableName
     events:
       - http:
           method: delete
@@ -85,8 +88,8 @@ functions:
     handler: src/handlers/getAllNotes.handler
     iamRoleStatements:
       - ${file(./iam/NotesTableIAM.yml):ScanItemNotesTableIAM}
-    environment:
-      NOTES_TABLE: !Ref NotesTable # get TableName
+    # environment:
+    #   NOTES_TABLE: !Ref NotesTable # get TableName
     events:
       - http:
           method: get
@@ -105,8 +108,8 @@ functions:
 
   oldNoteDeleter:
     handler: src/handlers/oldNoteDeleter.handler
-    environment:
-      NOTES_TABLE: !Ref NotesTable # get TableName
+    # environment:
+    #   NOTES_TABLE: !Ref NotesTable # get TableName
     iamRoleStatements:
       - ${file(./iam/NotesTableIAM.yml):DeleteItemNotesTableIAM}
       - ${file(./iam/NotesTableIAM.yml):ScanItemNotesTableIAM}
@@ -155,7 +158,7 @@ functions:
 
 resources:
   Resources:
-    NotesTable: ${file(./resources/NotesTable.yml):NotesTable}
+    # NotesTable: ${file(./resources/NotesTable.yml):NotesTable}
     CognitoUserPool: ${file(./resources/CognitoUserPool.yml):CognitoUserPool}
     CognitoUserPoolClient: ${file(./resources/CognitoUserPool.yml):CognitoUserPoolClient}
     CognitoUserPoolDomain: ${file(./resources/CognitoUserPool.yml):CognitoUserPoolDomain}
@@ -166,9 +169,12 @@ resources:
     CloudwatchMerticFilter: ${file(./resources/CloudwatchMerticFilter.yml):CloudwatchMerticFilter}
     SESUserEmail: ${file(./resources/SESUserEmail.yml):SESUserEmail}
     CloudWatchAlarm: ${file(./resources/CloudWatchAlarm.yml):CloudWatchAlarm}
+    Route53HealthCheck: ${file(./resources/Route53HealthCheck.yml):Route53HealthCheck}
 
 custom:
   layersDeploymentBucket: notes-service-dev-serverlessdeploymentbucket-1fvto0n6ho805
+  healthCheckId:
+    name: !Ref Route53HealthCheck
   MetricFilter:
     name: Notes-errors-${self:provider.stage}
   GetMetricFilter:
@@ -180,6 +186,12 @@ custom:
   SESEmail:
     name: !Ref SESUserEmail
     value: !Ref SESUserEmail
+  RegionOfInfra:
+    value: us-east-2
+  NOTES_TABLE:
+    name: ${cf(${self:custom.RegionOfInfra.value}):infra-service-${self:provider.stage}.NotesTable}
+    arn: ${cf(${self:custom.RegionOfInfra.value}):infra-service-${self:provider.stage}.NotesTableArn}
+  customDomain: ${file(./resources/CustomDomain.yml):CustomDomain}
 
   Outputs:
     UserPoolId:
