--- a/package.json
+++ b/package.json
@@ -1,18 +1,5 @@
 {
-  "name": "auction-serverless-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
- 
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.115",
-    "serverless-plugin-typescript": "^2.1.4",
-    "typescript": "^5.0.4"
+    "@types/aws-lambda": "^8.10.115"
   }
 }
