--- a/external-verification-service/.env
+++ b/external-verification-service/.env
@@ -1,1 +1,5 @@
 BUCKET_NAME=qloudnet-dev
+GITHUB_TOKEN=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
+GithubOwner=sehrish30
+GithubRepository=auction-api-IAC
+GithubBranch=main
