--- a/external-verification-service/serverless.yml
+++ b/external-verification-service/serverless.yml
@@ -51,6 +51,10 @@ functions:
               - ${self:custom.verifiedEventName.name}
 
 resources:
+  Parameters:
+    CodeBuildEnvironmentImage:
+      Type: String
+      Default: "aws/codebuild/standard:4.0"
   Resources:
     EventBus: ${file(./resources/EventBus.yml):EventBus}
     TargetVerificationDLQ: ${file(./resources/TargetVerificationQueue.yml):TargetVerificationDLQ}
@@ -59,9 +63,15 @@ resources:
     HeartBeatDynamoTable: ${file(./resources/HeartBeatDynamoTable.yml):HeartBeatDynamoTable}
     TargetVerfiticationQueueEventBusRule: ${file(./resources/EventBus.yml):TargetVerfiticationQueueEventBusRule}
 
+    CodePipelineArtifactStore: ${file(./resources/CodePipeline.yml):CodePipelineArtifactStore}
+    CodePipeline: ${file(./resources/CodePipeline.yml):CodePipeline}
     CodeBuildSourceCredentials: ${file(./resources/CodePipeline.yml):CodeBuildSourceCredentials}
     CodePipelineServiceRole: ${file(./resources/CodePipeline.yml):CodePipelineServiceRole}
-    Codebuild: ${file(./resources/CodePipeline.yml):Codebuild}
+    CodeBuildProject: ${file(./resources/CodePipeline.yml):CodeBuildProject}
+    CodeBuildDevProject: ${file(./resources/CodePipeline.yml):CodeBuildDevProject}
+    CodeBuildQAProject: ${file(./resources/CodePipeline.yml):CodeBuildQAProject}
+    CodeBuildProdProject: ${file(./resources/CodePipeline.yml):CodeBuildProdProject}
+    CodePipelineWebHook: ${file(./resources/CodePipeline.yml):CodePipelineWebHook}
 
   Outputs:
     VerificationEventBus:
